changes in JSONwriter